--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-persist": "^5.3.1"
+    "redux-localstorage-simple": "^1.3.1"
   }
 }
