create README.md and add gh-pages in npm scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/webpack/bin/webpack.js -p"
+    "build": "./node_modules/webpack/bin/webpack.js -p",
+    "gh-pages": "./node_modules/.bin/gh-pages -d dist"    
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "gh-pages": "^1.0.0",
     "node-sass": "^4.6.0",
     "react-hot-loader": "^3.1.1",
     "sass-loader": "^6.0.6",
