--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
   "scripts": {
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./src",
     "build": "./node_modules/webpack/bin/webpack.js -p",
-    "gh-pages": "./node_modules/.bin/gh-pages -d dist"    
+    "gh-pages": "./node_modules/.bin/gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "file-loader": "^1.1.5",
     "gh-pages": "^1.0.0",
     "node-sass": "^4.6.0",
@@ -32,6 +39,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "normalize.css": "^7.0.0",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
