--- a/package.json
+++ b/package.json
@@ -4,46 +4,65 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot  --env development",
+    "test": "./node_modules/jest/bin/jest.js",
     "lint": "eslint ./src",
-    "build": "./node_modules/webpack/bin/webpack.js -p",
+    "css-lint": "stylelint ./src",
+    "build:prod": "./node_modules/webpack/bin/webpack.js -p --env production",
     "gh-pages": "./node_modules/.bin/gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^8.3.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.11.0",
+    "babel-register": "^6.26.0",
+    "css-loader": "^0.28.11",
+    "dotenv-webpack": "^1.5.5",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.5",
+    "eslint-import-resolver-configurable": "^0.1.3",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "gh-pages": "^1.0.0",
-    "node-sass": "^4.6.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.4",
+    "precss": "^3.1.2",
     "react-hot-loader": "^3.1.1",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^7.0.1",
+    "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "stylelint": "^9.2.0",
+    "stylelint-config-css-modules": "^1.2.0",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.0.1",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "lodash": "^4.17.10",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-localstorage-simple": "^1.3.1"
+    "redux": "^3.7.2"
   }
 }
