--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot  --env development",
-    "test": "./node_modules/jest/bin/jest.js",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "lint": "eslint ./src",
     "css-lint": "stylelint ./src",
     "build:prod": "./node_modules/webpack/bin/webpack.js -p --env production",
@@ -18,6 +19,7 @@
     "autoprefixer": "^8.3.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -36,7 +38,7 @@
     "file-loader": "^1.1.11",
     "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
+    "jest": "^22.4.4",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.4",
