--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":
-      "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot  --env development",
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot  --env development",
     "test": "jest",
     "test:watch": "npm test -- --watch",
     "lint": "eslint ./src",
@@ -37,7 +36,7 @@
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "gh-pages": "^1.0.0",
+    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.4",
     "mini-css-extract-plugin": "^0.4.0",
